// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Renders a Header component in dev profile with LoadingBar, Navbar, Nav and dev ribbon. 1`] = `
<div
  id="app-header"
>
  <div
    className="ribbon dev"
  >
    <a
      href=""
    >
      <Translate
        component="span"
        contentKey="global.ribbon.dev"
      />
    </a>
  </div>
  <Connect(LoadingBar)
    className="loading-bar"
  />
  <Navbar
    className="navbar-light bg-white"
    expand="sm"
    fixed="top"
    tag="nav"
  >
    <NavbarToggler
      aria-label="Menu"
      onClick={[Function]}
      tag="button"
      type="button"
    />
    <MediaQuery
      maxDeviceWidth={768}
    >
      <div
        className="brand-logo"
      >
        <div
          className="brand-icon "
        >
          <img
            alt="Logo"
            src="content/images/benetech-logo.png"
          />
        </div>
      </div>
    </MediaQuery>
    <Component
      currentLocale="en"
      isAdmin={true}
      isAuthenticated={true}
      isInProduction={false}
      isSacramento={false}
      isShelterOwner={false}
      isStaging={false}
      isSwaggerEnabled={true}
      onLocaleChange={[Function]}
      ribbonEnv="dev"
      userLogin="user"
    />
    <Component
      isSacramento={false}
    />
    <Collapse
      appear={false}
      enter={true}
      exit={true}
      in={false}
      isOpen={false}
      mountOnEnter={false}
      navbar={true}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      tag="div"
      timeout={350}
      unmountOnExit={false}
    >
      <Nav
        className="ml-auto"
        id="header-tabs"
        navbar={true}
        tag="ul"
        vertical={false}
      >
        <Component
          currentLocale="en"
          isAdmin={true}
          isAuthenticated={true}
          isInProduction={false}
          isSacramento={false}
          isShelterOwner={false}
          isStaging={false}
          isSwaggerEnabled={true}
          onLocaleChange={[Function]}
          ribbonEnv="dev"
          userLogin="user"
        />
        <Component />
        <Component />
        <Component />
        <Component
          showDatabase={true}
          showSwagger={true}
        />
        <Component
          currentLocale="en"
          onClick={[Function]}
        />
        <Component
          currentLocale="en"
          isAdmin={true}
          isAuthenticated={true}
          isInProduction={false}
          isSacramento={false}
          isShelterOwner={false}
          isStaging={false}
          isSwaggerEnabled={true}
          onLocaleChange={[Function]}
          ribbonEnv="dev"
          userLogin="user"
        />
      </Nav>
    </Collapse>
  </Navbar>
</div>
`;

exports[`Header Renders a Header component in prod profile with LoadingBar, Navbar, Nav. 1`] = `
<div
  id="app-header"
>
  <Connect(LoadingBar)
    className="loading-bar"
  />
  <Navbar
    className="navbar-light bg-white"
    expand="sm"
    fixed="top"
    tag="nav"
  >
    <NavbarToggler
      aria-label="Menu"
      onClick={[Function]}
      tag="button"
      type="button"
    />
    <MediaQuery
      maxDeviceWidth={768}
    >
      <div
        className="brand-logo"
      >
        <div
          className="brand-icon "
        >
          <img
            alt="Logo"
            src="content/images/benetech-logo.png"
          />
        </div>
      </div>
    </MediaQuery>
    <Component
      currentLocale="en"
      isAdmin={true}
      isAuthenticated={true}
      isInProduction={true}
      isSacramento={false}
      isShelterOwner={false}
      isStaging={false}
      isSwaggerEnabled={false}
      onLocaleChange={[Function]}
      ribbonEnv="prod"
      userLogin="user"
    />
    <Component
      isSacramento={false}
    />
    <Collapse
      appear={false}
      enter={true}
      exit={true}
      in={false}
      isOpen={false}
      mountOnEnter={false}
      navbar={true}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      tag="div"
      timeout={350}
      unmountOnExit={false}
    >
      <Nav
        className="ml-auto"
        id="header-tabs"
        navbar={true}
        tag="ul"
        vertical={false}
      >
        <Component
          currentLocale="en"
          isAdmin={true}
          isAuthenticated={true}
          isInProduction={true}
          isSacramento={false}
          isShelterOwner={false}
          isStaging={false}
          isSwaggerEnabled={false}
          onLocaleChange={[Function]}
          ribbonEnv="prod"
          userLogin="user"
        />
        <Component />
        <Component />
        <Component />
        <Component
          showDatabase={false}
          showSwagger={false}
        />
        <Component
          currentLocale="en"
          onClick={[Function]}
        />
        <Component
          currentLocale="en"
          isAdmin={true}
          isAuthenticated={true}
          isInProduction={true}
          isSacramento={false}
          isShelterOwner={false}
          isStaging={false}
          isSwaggerEnabled={false}
          onLocaleChange={[Function]}
          ribbonEnv="prod"
          userLogin="user"
        />
      </Nav>
    </Collapse>
  </Navbar>
</div>
`;
